Adding the secured password for the salesforce instance

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,2 +1,6 @@
 language: java
 install: wget -P utils/ https://github.com/heroku/force/releases/download/v0.22.50/force_linux_amd64
+secure: "Vp6CYMrPlS3MeXEsoKjxHehOG64n/upGGmBMdzXqkCrILpQbyhL2YZQoxFFbBUhQDEENkYj1AjPlhj7EFwsTLyoTAxKukJ3kaQKxpMrb5IJX9zeT8v992mKoZR8dqXFXYdXB8cx7QwOVDdV9vZQxxdURKXF6zQN/0LbNx73/g7Hvp+ji6j9YfMvPs7fU7W5lAXSTB7dA
+h6NptMqz37PgZv4s2DL4wDaNoEVycVsOvDwiANvUzRpIythCgTkToAYj+omeyn3fXbhtea0q4hSHt2fV+fv0N9qk+M44UtQkVBeRuxKDwVBvFDiNWNE/9gXnN6lfwVvr84H0HOue4hwi/0TRpSVHDJLgXmhzWaciPm5xu2Ehn5p8bQJ6OAA8OH4BPNZkdeI4l93RlJluMHM+5FAEPeJ
+GywUZGrD7WpNX0rGldjmP4gYdoceM6XlIuOVYp0UvOo56244/0KIjj59xhee8gxE/mSYFJRtFg3+MMTtDFQs8Uy21bgvU2p4XRfFjK55X1GbYEfODWWijBdYjQ13rlhp/VnJk8QWzzM4s0t2ZGy6VgpG+Lo4Kiv68EaeXifD8GSJUKNPZ3mfNyCo2Kmx/209Yt48h15EmbxnHzmec18
++DtOy7R7Iaa5bzvr0H6mEM3EzW4XSU2XlYFOsil36RNTQDJFdc4Hl9TvCw0WA="
