--- a/build.properties
+++ b/build.properties
@@ -2,7 +2,7 @@
 #
 
 # Specify the login credentials for the desired Salesforce organization
-#sf.username = <Insert your Salesforce username here>
+sf.username = barros.joan@gmail.com
 #sf.password = <Insert your Salesforce password here>
 #sf.sessionId = <Insert your Salesforce session id here.  Use this or username/password above.  Cannot use both>
 #sf.pkgName = <Insert comma separated package names to be retrieved>
